--- a/index.css
+++ b/index.css
@@ -87,3 +87,12 @@ body {
   -webkit-text-fill-color: transparent;
   background-clip: text;
 }
+
+.hover\:pause-animation:hover {
+  animation-play-state: paused;
+}
+
+.mask-image-linear-gradient {
+  mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
+  -webkit-mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
+}
